--- a/FrontEnd/Pages/Empleados/List.cshtml
+++ b/FrontEnd/Pages/Empleados/List.cshtml
@@ -3,6 +3,13 @@
 @{
 }
 <h1> Lista de Empleados </h1>
+<form method="get">
+    <div class="form-group">
+        <p>
+            Saludo: <input type="text" name="filtroBusqueda" asp-for="FiltroBusqueda"/>
+            <input type="submit" value="Filtrar" />
+        </p>
+</form>
 
 <table class="table">
     <thead class="thead-light">
