--- a/FrontEnd/Pages/Shared/_Layout.cshtml
+++ b/FrontEnd/Pages/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Gestión de Restaurantes</title>
+    <title>@ViewData["Title"] Gestión de Restaurantes</title>
     <script src="https://kit.fontawesome.com/233fb2bb35.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
