--- a/FrontEnd/Pages/Shared/_Layout.cshtml
+++ b/FrontEnd/Pages/Shared/_Layout.cshtml
@@ -34,6 +34,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Domiciliarios/ListDomiciliarios">Lista Domiciliarios</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Restaurantes/ListRestaurantes">Lista Restaurantes</a>
+                        </li>
                     </ul>
                 </div>
             </div>
