--- a/FrontEnd/Pages/Shared/_Layout.cshtml
+++ b/FrontEnd/Pages/Shared/_Layout.cshtml
@@ -40,6 +40,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Clientes/ListClientes">Lista Clientes</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Productos/Productos">Lista Productos</a>
+                        </li>
                     </ul>
                 </div>
             </div>
