Correccion CRUD PRODUCTOS

--- a/FrontEnd/Pages/Productos/Productos.cshtml
+++ b/FrontEnd/Pages/Productos/Productos.cshtml
@@ -20,7 +20,9 @@
             <th scope="col">Descripción</th>
             <th scope="col">Descuento</th>
             <th scope="col">PrecioFinal</th>
-            
+            <th scope="col">Detalles</th>
+            <th scope="col">Editar</th>
+            <th scope="col">Borrar</th>         
         </tr>
     </thead>
     @foreach (var producto in Model.Productos)
